--- a/src/Interface_en.properties
+++ b/src/Interface_en.properties
@@ -1,5 +1,13 @@
+# ================================================================================================================ 
+loader.loading = \u0141adowanie niezb\u0119dnych plików...
+loader.updateDone = Instalowanie aktualizacji...
+loader.connectionError = Wyst\u0105pi\u0142 problem z po\u0142\u0105czeniem!
+loader.updateStarted = Rozpoczynam aktualizacje...
+loader.updateError = Wyst\u0105pi\u0142 problem z aktualizacj\u0105!
+loader.versionOk = Wersja jest aktualna!
+
 # ================================================================================================================ #
-main.version = [EN] Wersja programu: 
+main.version = Wersja programu:
 # ================================================================================================================ #
 
 # ================================================================================================================ #
