--- a/src/Interface_de.properties
+++ b/src/Interface_de.properties
@@ -7,7 +7,7 @@ loader.updateError = Wyst\u0105pi\u0142 problem z aktualizacj\u0105!
 loader.versionOk = Wersja jest aktualna!
 
 # ================================================================================================================ #
-main.version = Wersja programu:
+main.version = [DE] Wersja programu:
 # ================================================================================================================ #
 
 # ================================================================================================================ #
