--- a/src/Interface_en.properties
+++ b/src/Interface_en.properties
@@ -4,7 +4,7 @@ loader.updateDone = Instalowanie aktualizacji...
 loader.connectionError = Wyst\u0105pi\u0142 problem z po\u0142\u0105czeniem!
 loader.updateStarted = Rozpoczynam aktualizacje...
 loader.updateError = Wyst\u0105pi\u0142 problem z aktualizacj\u0105!
-loader.versionOk = Wersja jest aktualna!
+loader.versionOk = [EN] Wersja jest aktualna!
 
 # ================================================================================================================ #
 main.version = Wersja programu:
