Przetłumaczona większa część programu i poprawki.

--- a/src/Interface_de.properties
+++ b/src/Interface_de.properties
@@ -1,37 +1,59 @@
 # ================================================================================================================ 
-loader.loading = \u0141adowanie niezb\u0119dnych plików...
-loader.updateDone = Instalowanie aktualizacji...
-loader.connectionError = Wyst\u0105pi\u0142 problem z po\u0142\u0105czeniem!
-loader.updateStarted = Rozpoczynam aktualizacje...
-loader.updateError = Wyst\u0105pi\u0142 problem z aktualizacj\u0105!
-loader.versionOk = Wersja jest aktualna!
-
+loader.loading = Dateien werden geladen...
+loader.updateDone = Installation des Updates...
+loader.connectionError = Fehler beim Verbinden mit dem Server!
+loader.updateStarted = Starte die Updates...
+loader.checking = Überprüfen des Updates...
+loader.updateError = Problem mit dem Update!
+loader.versionOk = Die Version ist aktuell.
 # ================================================================================================================ #
-main.version = [DE] Wersja programu:
+updater.title = Suche ein Programm Update...
+updater.developerMode = Diese Option ist aufgrund des Entwicklermodus nicht verfügbar
+updater.updateReady = Update verfügbar!\nStarten Sie das Programm neu!
+updater.updateError = Fehler beim Verbinden mit dem Server!
+updater.versionOk = Die Version ist aktuell.
 # ================================================================================================================ #
-
+main.version = Programmversion:
 # ================================================================================================================ #
-main.selectModule = Wybierz modu\u0142
-main.selectModule.lessonPlan = Mój plan lekcji
-main.selectModule.eventsEditor = Moje wydarzenia
-main.selectModule.gym = Moja si\u0142ownia
-main.selectModule.exit = Wyjd\u017A z programu
+main.selectModule = Wählen Sie ein Modul
+main.selectModule.lessonPlan = Mein Unterrichtsplan
+main.selectModule.eventsEditor = Meine Ereignisse
+main.selectModule.gym = Mein Fitnessstudio
+main.selectModule.exit = Ausfahrt!
 # ================================================================================================================ #
-
+main.settings = Einstellungen
+main.settings.base = Allgemeine Einstellungen
 # ================================================================================================================ #
-main.settings = Ustawienia
-main.settings.base = Ustawienia ogólne
+main.help = Hilfe
+main.help.updates = Nach Updates suchen
+main.help.about = Über das Programm
 # ================================================================================================================ #
-
+options.interface = Sprache:
+options.interfaceNote = Nach der Änderung ist ein Neustart erforderlich
+options.autoUpdates = Automatische Updates
+options.buttonReturn = Rückkehr
 # ================================================================================================================ #
-main.help = Pomoc
-main.help.updates = Sprawd\u017A aktualizacje
-main.help.about = O programie
+events.set = Geplante Ereignisse
+events.eventName = Ereignisname
+events.comment = Kommentar
+events.callWhen = Ruf wann
+events.hint = Länge des Textes 1-64
+events.disableEvent = Deaktivieren
+events.enterDate = Datum
 # ================================================================================================================ #
-
+events.taskType = Ereignistyp
+events.taskType.show = Aussage
+events.taskType.shutdown = Schalte den Computer aus
+events.taskType.logoff = Abmelden
 # ================================================================================================================ #
-options.interface = J\u0119zyk interfejsu:
-options.interfaceNote = Po zmianie j\u0119zyka wymagany jest restart aplikacji.
-options.autoUpdates = Automatyczne aktualizacje
-options.buttonReturn = Wró\u0107 do menu.
+events.message = Nachricht
+events.newEvent = Neues Ereignis
+events.applyEvent = Anwenden
+events.editEvent = Bearbeiten
+events.removeEvent = Entfernen
+events.save = Speichern
+events.return = Rückkehr
+# ================================================================================================================ #
+events.errors.eventExist = Das Ereignis ist bereits vorhanden!\nErstelle ein neues!
+events.errors.badRegularExpression = Füllen Sie alle Felder aus!
 # ================================================================================================================ #
