--- a/src/Interface_en.properties
+++ b/src/Interface_en.properties
@@ -1,37 +1,59 @@
 # ================================================================================================================ 
-loader.loading = \u0141adowanie niezb\u0119dnych plików...
-loader.updateDone = Instalowanie aktualizacji...
-loader.connectionError = Wyst\u0105pi\u0142 problem z po\u0142\u0105czeniem!
-loader.updateStarted = Rozpoczynam aktualizacje...
-loader.updateError = Wyst\u0105pi\u0142 problem z aktualizacj\u0105!
-loader.versionOk = Wersja jest aktualna!
-
+loader.loading = Loading files...
+loader.updateDone = Installing updates...
+loader.connectionError = Problem with connection occurred.
+loader.updateStarted = Preparing updates...
+loader.checking = Checking for updates...
+loader.updateError = Problem with update occurred.
+loader.versionOk = Version is up to date.
 # ================================================================================================================ #
-main.version = [EN] Wersja programu:
+updater.title = Checking for updates...
+updater.developerMode = This option is disabled because program is in developer mode.
+updater.updateReady = Update is ready restart your program to begin update.\nRemember you should enable auto updates to update current version.
+updater.updateError = Server not responding !
+updater.versionOk = Version is up to date.
 # ================================================================================================================ #
-
+main.version = Program version:
 # ================================================================================================================ #
-main.selectModule = Wybierz modu\u0142
-main.selectModule.lessonPlan = Mój plan lekcji
-main.selectModule.eventsEditor = Moje wydarzenia
-main.selectModule.gym = Moja si\u0142ownia
-main.selectModule.exit = Wyjd\u017A z programu
+main.selectModule = Select module
+main.selectModule.lessonPlan = My Lesson Plan
+main.selectModule.eventsEditor = My Planned Events
+main.selectModule.gym = My Gym
+main.selectModule.exit = Exit
 # ================================================================================================================ #
-
+main.settings = Settings
+main.settings.base = Common settings
 # ================================================================================================================ #
-main.settings = Ustawienia
-main.settings.base = Ustawienia ogólne
+main.help = Help
+main.help.updates = Check for updates
+main.help.about = About program
 # ================================================================================================================ #
-
+options.interface = Interface language
+options.interfaceNote = You need restart program to apply settings.
+options.autoUpdates = Auto updates
+options.buttonReturn = Return to menu
 # ================================================================================================================ #
-main.help = Pomoc
-main.help.updates = Sprawd\u017A aktualizacje
-main.help.about = O programie
+events.set = Planned events
+events.eventName = Event name
+events.comment = Comment
+events.callWhen = Execute when
+events.hint = Text length 1-64
+events.disableEvent = Disable event
+events.enterDate = Enter date
 # ================================================================================================================ #
-
+events.taskType = Event type
+events.taskType.show = Show message
+events.taskType.shutdown = Shutdown PC
+events.taskType.logoff = Log off
 # ================================================================================================================ #
-options.interface = J\u0119zyk interfejsu:
-options.interfaceNote = Po zmianie j\u0119zyka wymagany jest restart aplikacji.
-options.autoUpdates = Automatyczne aktualizacje
-options.buttonReturn = Wró\u0107 do menu.
+events.message = Alert
+events.newEvent = New event
+events.applyEvent = Apply
+events.editEvent = Edit event
+events.removeEvent = Remove event
+events.save = Save
+events.return = Return
+# ================================================================================================================ #
+events.errors.eventExist = This event already exist!\nCreate a new one!
+events.errors.badRegularExpression = Complete all fields according to scheme.
 # ================================================================================================================ #
