Plan przetłumaczony, wywalone undo i redo #done bez kappi

--- a/src/Interface_de.properties
+++ b/src/Interface_de.properties
@@ -57,3 +57,14 @@ events.return = Rückkehr
 events.errors.eventExist = Das Ereignis ist bereits vorhanden!\nErstelle ein neues!
 events.errors.badRegularExpression = Füllen Sie alle Felder aus!
 # ================================================================================================================ #
+plan.return = Rückkehr
+plan.save = Speichern Veränderung
+plan.hour = Stunde
+plan.monday = Montag
+plan.tuesday = Dienstag
+plan.wednesday = Mittwoch
+plan.thursday = Donnerstag
+plan.friday = Freitag
+plan.addRow = Hinzufügen die Regierung
+plan.delRow = Entfernen die Regierung
+# ================================================================================================================ #
