--- a/src/Interface_en.properties
+++ b/src/Interface_en.properties
@@ -57,3 +57,14 @@ events.return = Return
 events.errors.eventExist = This event already exist!\nCreate a new one!
 events.errors.badRegularExpression = Complete all fields according to scheme.
 # ================================================================================================================ #
+plan.return = Return
+plan.save = Save changes
+plan.hour = Hours
+plan.monday = Monday
+plan.tuesday = Tuesday
+plan.wednesday = Wednesday
+plan.thursday = Thursday
+plan.friday = Friday
+plan.addRow = Add row
+plan.delRow = Delete row
+# ================================================================================================================ #
