--- a/src/Interface_de.properties
+++ b/src/Interface_de.properties
@@ -68,3 +68,45 @@ plan.friday = Freitag
 plan.addRow = Hinzufügen die Regierung
 plan.delRow = Entfernen die Regierung
 # ================================================================================================================ #
+gym.return = Rückkehr
+gym.save = Speichern
+gym.info = Informationen
+gym.masa_kg = Körpergewicht(kg)
+gym.obw_klatki = Brustumfang
+gym.obw_brzucha = Bauchumfang
+gym.obw_bic = Bizeps-Schaltung
+gym.zaw_dod = Zusätzlicher Inhalt
+gym.kalk_s = Kalorienzähler
+gym.plany_t = Trainingspläne
+gym.rodz_akt = Art der Aktivität:
+gym.wyb_rodz_akt = Wählen Sie eine Aktivität
+gym.aerobik = Aerobic
+gym.boks = Boxen
+gym.jazda_row = Radfahren
+gym.bieg8 = Lauf(8km/h)
+gym.bieg15 = Lauf(15km/h)
+gym.jazda_n = Skifahren
+gym.koszykowka = Basketball
+gym.siatkowka = Volleyball
+gym.skakanka = Seilspringen
+gym.trampolina = Springen auf dem Trampolin
+gym.kregle = Bowling
+gym.jazda_d = Skateboard fahren
+gym.spacer = Gehen
+gym.golf = Golf
+gym.czas_min = Zeit(min)
+gym.oblicz = Berechnen
+gym.spalone_k = Kalorien verbrannt
+gym.dod_plan =  Füge einen Plan hinzu
+gym.wys_plan = Zeige den Plan
+gym.cwiczenie = Übung
+gym.powtorzenia = Wiederholungen
+gym.dodaj = hinzufügen
+gym.naz_planu = Name des Plans:
+gym.plec = Sex:
+gym.LBM = LBM
+gym.wzrost_cm = Wachstum(cm):
+gym.masaLBM = Körpergewicht ohne Fett ist:
+gym.wzrost_m = Wachstum(m):
+gym.BMI = Dein BMI ist:
+# ================================================================================================================ #
