--- a/src/Interface_en.properties
+++ b/src/Interface_en.properties
@@ -68,3 +68,45 @@ plan.friday = Friday
 plan.addRow = Add row
 plan.delRow = Delete row
 # ================================================================================================================ #
+gym.return = Return
+gym.save = Save
+gym.info = Information
+gym.masa_kg = body weight(kg)
+gym.obw_klatki = Belly circumference
+gym.obw_brzucha = Belly circumference
+gym.obw_bic = Chest circumference
+gym.zaw_dod = Additional content
+gym.kalk_s = Calorie burning calculator
+gym.plany_t = Training plans
+gym.rodz_akt = Type of activity
+gym.wyb_rodz_akt = Choose activity
+gym.aerobik = Aerobic
+gym.boks = Box
+gym.jazda_row = Cycling
+gym.bieg8 = run(8km/h)
+gym.bieg15 = run(15km/h)
+gym.jazda_n = Skiing
+gym.koszykowka = Basketball
+gym.siatkowka = Volleyball
+gym.skakanka = Jumping rope
+gym.trampolina = Jumping on the trampoline
+gym.kregle = Bowling
+gym.jazda_d = Skateboarding
+gym.spacer = Walk
+gym.golf = Golf
+gym.czas_min = Time(min)
+gym.oblicz = Calculate
+gym.spalone_k = calories burned:
+gym.dod_plan = Add a training plan
+gym.wys_plan = View plan
+gym.cwiczenie = Exercise
+gym.powtorzenia = Repetitions
+gym.dodaj = Add
+gym.naz_planu = Plan name:
+gym.plec = Sex
+gym.LBM = LBM
+gym.wzrost_cm = Height (cm)
+gym.masaLBM = Body weight without fat is:
+gym.wzrost_m = Height (m)
+gym.BMI = Your BMI is:
+# ================================================================================================================ #
