--- a/src/Interface_de.properties
+++ b/src/Interface_de.properties
@@ -76,7 +76,7 @@ gym.obw_klatki = Brustumfang
 gym.obw_brzucha = Bauchumfang
 gym.obw_bic = Bizeps-Schaltung
 gym.zaw_dod = Zusätzlicher Inhalt
-gym.kalk_s = Kalorienzähler
+gym.kalks = Kalorienzähler
 gym.plany_t = Trainingspläne
 gym.rodz_akt = Art der Aktivität:
 gym.wyb_rodz_akt = Wählen Sie eine Aktivität
@@ -101,12 +101,16 @@ gym.dod_plan =  Füge einen Plan hinzu
 gym.wys_plan = Zeige den Plan
 gym.cwiczenie = Übung
 gym.powtorzenia = Wiederholungen
-gym.dodaj = hinzufügen
+gym.dodaj = Hinzufügen
 gym.naz_planu = Name des Plans:
 gym.plec = Sex:
-gym.LBM = LBM
 gym.wzrost_cm = Wachstum(cm):
 gym.masaLBM = Körpergewicht ohne Fett ist:
 gym.wzrost_m = Wachstum(m):
 gym.BMI = Dein BMI ist:
+gym.male = Mann
+gym.female = Frau
+gym.bad_weight = Körpergewicht falsch angegeben!!!
+gym.bad_height = Falsche Höhe!!!
+gym.bad_time = Falsche Zeit!!!
 # ================================================================================================================ #
